log/build_2023-11-24_17-03-24/joystick_sub/stderr.log
  File "/home/aiclub/Desktop/TEL_Robot/install/joystick_sub/lib/python3.8/site-packages/joystick_sub/joystick_sub.py", line 157
    self.y = cos(radians(newAvgAngle)) * newAvgDistance -
                                                         ^
SyntaxError: invalid syntax

